# shiny-react

./: .gitignore  README.md  build.ts  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build-shinylive-links.yml
apps/example/: app.R  app.py
apps/example-two-instances/: app.R  app.py
apps/fancy/: app.R
apps/hello-world/: app.R  app.py  package-lock.json
apps/plot/: app.py
example-app/: app.py
examples/: CLAUDE.md.template
examples/1-hello-world/: CLAUDE.md  README.md  package-lock.json  package.json
examples/2-components/: package-lock.json
examples/2-inputs/: README.md  package-lock.json  package.json
examples/3-outputs/: README.md  package-lock.json  package.json
examples/4-messages/: README.md  package-lock.json  package.json  tsconfig.json
examples/5-shadcn/: README.md  build.ts  package-lock.json  package.json
examples/6-dashboard/: README.md  build.ts  package-lock.json  package.json
examples/example/: app.R
hello/: app.R  app.py
hello-world/: app.R  app.py
js/: build.ts  package.json  tsconfig.json
py/: README.md  pyproject.toml
py/src/shiny_react/: __init__.py  dependencies.py
r/: DESCRIPTION  NAMESPACE  README.md
scripts/: build-all-examples.sh  build.sh  clean-all-examples.sh  dev.sh  generate-shinylive-links.py
shiny_react/: __init__.py  shiny_react.py
src/: ImageOutput.tsx  index.ts  message-registry.ts  react-registry.ts  shiny-message.ts  use-shiny.ts  utils.ts
srcts/: HelloWorldComponent.tsx  TestComponent.tsx  index.tsx
templates/: CLAUDE.md.template
(+165 files in other folders)
