[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiny-react"
version = "1.0.0"
description = "React bindings for Python Shiny applications"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Winston Chang", email = "winston@posit.co" }
]
keywords = ["shiny", "react", "python", "data-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "shiny",
    "htmltools",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/wch/shiny-react"
Repository = "https://github.com/wch/shiny-react.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shiny_react = ["www/*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
